# scilab-mip

./: .gitignore  README.md
DoE/: builder.sce  readme  readme.txt
GammaTest_exe/: Filter.cpp  (+5 more)
gammatest_exe/: Arguments.cpp  CMakeLists.txt  GammaTest.mdsp  GammaTest_Estimator.cpp  GammaTest_Estimator.h  README  kdtree_static.h  license.txt
gammatest_exe/Data/: README  Sin500_norm.txt  nonlin_model.csv  nonlin_model_2.csv  nonlin_model_3.csv  sine_noise_1_0.txt
gammatest_exe/MATLAB/: gammaTest.asv  gammaTest.m  test.m
gammatest_exe/src/: Arguments.cpp  Arguments.h  Filter.cpp  GammaTest.cpp  GammaTest.h  GammaTest_Estimator.cpp  MainGT.cpp  Makefile  kdtree_2.cpp  kdtree_2.h  kdtree_static.h
gammatest_exe/src/kdtree_sample/: kdtree_sample_2.cpp
lolimot_exe/: CMakeLists.txt  Makefile  log.txt  readme.txt
lolimot_exe/src/: Analysis.cpp  Analysis.h  DefaultParam.cpp  DefaultParam.h  DisplayData.h  ExportC.cpp  ExportC.h  ExportCommonC_Cpp.cpp  ExportCommonC_Cpp.h  ExportCpp.cpp  ExportCpp.h  ExportMatlab.cpp  ExportMatlab.h  ExportMinMaxMap.cpp  ExportMinMaxMap.h  Filter.cpp  Filter.h  LL_Cut.cpp  LL_Cut.h  LL_Dimension.cpp  LL_Dimension.h  LL_Lolimot.cpp  LL_Lolimot.h  LL_Mesure.cpp  LL_Mesure.h  LL_Partition.cpp  LL_Partition.h  Learning.cpp  Learning.h  Post.cpp  Post.h  TrainLolimot2.cpp  TrainLolimotStruct.h  Validate.cpp  Validate.h
lolimot_exe/src/Lasso/: Makefile  lasso.c  lasso.h  test_lasso.c
lolimot_exe/src/SmallLapack/: F77_aloc.c  Makefile  d_lg10.c  d_sign.c  d_sqrt.c  dbdsqr.c  dcopy.c  dgebd2.c  dgemm.c  dgemv.c  dlabad.c  dlamch.c  dlapy2.c  dlarf.c  dlascl.c  dlasq1.c  dlasq2.c  dlasq3.c  dnrm2.c  dorgbr.c  dorglq.c  dorm2r.c  dorml2.c  dormlq.c  drscl.c  dtrmm.c  dtrmv.c  f2c.h  ieeeck.c  lsame.c
lolimot_exe/tests/: DD_0_0_Test_Cone_woNoiseY.c  DD_0_0_Test_Cone_woNoiseY.cpp  DD_0_0_Test_Cone_woNoiseY.h  DD_0_0_Test_Cone_woNoiseY.m  DD_0_1_Test_Cone_woNoiseY.c  DD_0_1_Test_Cone_woNoiseY.cpp  DD_0_1_Test_Cone_woNoiseY.h  DD_0_1_Test_Cone_woNoiseY.m  DD_1_0_Test_Cone_woNoiseY.c  DD_1_0_Test_Cone_woNoiseY.cpp  DD_1_0_Test_Cone_woNoiseY.h  DD_1_0_Test_Cone_woNoiseY.m  DD_1_1_Test_Cone_woNoiseY.c  DD_1_1_Test_Cone_woNoiseY.cpp  DD_1_1_Test_Cone_woNoiseY.h  DD_1_1_Test_Cone_woNoiseY.m  D_0_Test_Cone_woNoiseY.c  D_0_Test_Cone_woNoiseY.cpp  D_0_Test_Cone_woNoiseY.h  D_0_Test_Cone_woNoiseY.m  D_1_Test_Cone_woNoiseY.c  D_1_Test_Cone_woNoiseY.cpp  D_1_Test_Cone_woNoiseY.h  D_1_Test_Cone_woNoiseY.m  Makefile  Test_Cone_woNoiseY.c  Test_Cone_woNoiseY.cpp  Test_Cone_woNoiseY.h  Test_Cone_woNoiseY.m  runTest.sh
lolimot_exe/tests/Modele/: Modele_Line.txt  Modele_Sinus.txt  Modele_Sinus_Ph1.txt  Modele_Sinus_Ph2.txt  Modele_Test_Cone_Noise.txt  Modele_Test_Cone_woNoise.txt  Modele_Test_Plan_woNoise.txt  Modele_Test_Sinus_Noise.txt  Modele_Test_Temporel_Gap_Noise.txt  Modele_Test_Temporel_Gap_woNoise.txt  Modele_Test_Temporel_Noise.txt  Modele_Test_Temporel_woNoise.txt
oboe/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  README.W32  THANKS  aclocal.m4  config.h.in  configure  configure.ac  create_oboe_lib.sh  reconf
oboe/WIN32/: OBOE_LIB.vs3.sln  OBOE_LIB.vs3.vcproj  OBOE_LIB.vs5.icproj  OBOE_LIB.vs5.ncb  OBOE_LIB.vs5.sln  OBOE_LIB.vs5.vcproj  UpgradeLog.XML  config.h
oboe/WIN32/Test/MCFTest/: MCFTest.vcproj  MCFTest.vcproj.8.00.old  ReadMe.txt
oboe/doc/: Makefile.am  Makefile.in  OBOE-FAQ.html
oboe/include/: AccpmDefs.hpp  AccpmGenMatrix.hpp  AccpmVector.hpp  ExitCode.hpp  Oracle.hpp  Parameters.hpp  Timer.hpp  config.h
oboe/m4/: Makefile.am  Makefile.in  coin.m4  oboe_usr_libs.m4
oboe/src/: Makefile.am  Makefile.in
oboe/src/AccpmCore/: LocSet.cpp  LocSet.hpp  Makefile.am  Makefile.in  Manager.cpp  Manager.hpp  ManagerTest.cpp  Method.cpp  Method.hpp  Solution.cpp  Solution.hpp  param.txt
oboe/src/AccpmLA/: AccpmBlasInterface.cpp  AccpmBlasInterface.hpp  AccpmDynMatrix.cpp  AccpmDynMatrix.hpp  AccpmGenMatrix.cpp  AccpmGenMatrix.hpp  AccpmLASolve.cpp  AccpmLASolve.hpp  AccpmVector.cpp  AccpmVector.hpp  Makefile.am  Makefile.in  MatrixTest.cpp
oboe/src/Benchmark/: Makefile.am  Makefile.in  README
oboe/src/Benchmark/APS/: APC_rot.reservoir  APSTest.cpp  Makefile.am  Makefile.in  param.txt
oboe/src/Benchmark/CS/: CSTest.cpp  Makefile.am  Makefile.in  param.txt
oboe/src/Benchmark/HACCPM/: HACCPMTest.cpp  Makefile.am  Makefile.in  param.txt
oboe/src/Benchmark/LA/: LATest.cpp  Makefile.am  Makefile.in  param.txt
oboe/src/Benchmark/MCF/: Cpl30.txt  Dpl30.txt  MCFOracle.cpp  MCFOracle.hpp  MCFOracleFunction.cpp  MCFOracleFunction.hpp  MCFSmoothOracleFunction.cpp  MCFSmoothOracleFunction.hpp  MCFTest.cpp  Makefile.am  Makefile.in  param.txt
oboe/src/Benchmark/NNPOL/: EigenValue.cpp  EigenValue.hpp  Makefile.am  Makefile.in  NNPOLTest.cpp  param.txt
oboe/src/Benchmark/PMED/: Makefile.am  Makefile.in  PMEDTest.cpp  dist.txt  param.txt
oboe/src/Benchmark/QP/: Makefile.am  Makefile.in  QPNDHSmoothOF.cpp  QPNDHSmoothOF.hpp  QPNDHTest.cpp  QPTest.cpp  param.txt
oboe/src/Benchmark/TSP/: Makefile.am  Makefile.in  TSPTest.cpp  param.txt  tsp29.coord
oboe/src/Benchmark/UAX/: Makefile.am  Makefile.in  UAXTest.cpp  param.txt
oboe/src/Oracle/: Makefile.am  Makefile.in  Oracle.cpp  Oracle.hpp
oboe/src/ProblemInput/: Makefile.am  Makefile.in  ParameterTest.cpp  Parameters.cpp  Parameters.hpp  param.oboe
oboe/src/UI/: Makefile.am  Makefile.in  QpGenerator.cpp  QpGenerator.hpp
oboe/src/Utilities/: AccpmDefs.hpp  AccpmSignal.hpp  ExitCode.hpp  Makefile.am  Makefile.in
scisnes/: Makefile.am  Makefile.in  README  aclocal.m4  builder.sce.in  configure  configure.ac  libtool  license.txt
scisnes/demos/: badbroyden.sci  fsolve_snes.sce  function6.sci  generalrosenbrock.sci  plot_pipe_graph.sci  scisnes.dem.gateway.sce
scisnes/etc/: scisnes.start
scisnes/help/en_US/: fsolver_snes.xml
scisnes/m4/: mym4.m4  petsc.m4
scisnes/macros/: cleanmacros.sce  sfdjac.sci
scisnes/sci_gateway/: builder_gateway.sce
scisnes/sci_gateway/cpp/: builder_gateway_cpp.sce  config.h.in  helper.h  parameters.cpp  sci_fsolver_snes.cpp
(+1431 files in other folders)
