# Copyright (c) 2004-2007 Université de Genève, HEC, Logilab
# 
# OBOE is published under the Common Public License.
#
# Authors :
# The OBOE team
#

EXTRA_DIST = reconf configure Doxyfile create_oboe_lib.sh README.W32 \
	doc/OBOE-FAQ.html \
	doc/userguide/OBOE-UserGuide.pdf \
	m4/coin.m4 \
	m4/oboe_usr_libs.m4 \
        WIN32/config.h \
	WIN32/OBOE_LIB.vs3.sln \
        WIN32/OBOE_LIB.vs3.vcproj \
	WIN32/OBOE_LIB.vs5.sln \
        WIN32/OBOE_LIB.vs5.vcproj \
	WIN32/Test/MCFTest/MCFTest.vcproj \
	WIN32/Test/MCFTest/ReadMe.txt \
        include/*.hpp


include_HEADERS = config.h
SUBDIRS = m4 src doc
