# Copyright (c) 2004-2007 University of Geneva, HEC, Logilab
# 
# OBOE is published under the Common Public License.
#
# Authors :
# Nidhi Sawhney <nsawhney@yahoo.com>
# The OBOE team
#
#

include_HEADERS = Oracle.hpp

lib_LIBRARIES = libaccpmoracle.a

libaccpmoracle_a_SOURCES = Oracle.cpp

INCLUDES = -I$(top_srcdir)/src/Utilities -I$(top_srcdir)/src/AccpmLA -I$(LAPACKCPP_DIR)/include/lapackpp
